samples/_failures_safe/1761556190_2a7e1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d060652.c: In function ‘main’:
./samples/SAFE/__tmp_1d060652.c:148:13: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  148 |             print
      |             ^~~~~
      |             printf
./samples/SAFE/__tmp_1d060652.c:148:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1d060652.c:148:18: error: expected ‘;’ at end of input
  148 |             print
      |                  ^
      |                  ;
./samples/SAFE/__tmp_1d060652.c:148:13: error: expected declaration or statement at end of input
  148 |             print
      |             ^~~~~
./samples/SAFE/__tmp_1d060652.c:148:13: error: expected declaration or statement at end of input
